gccida/g2/ix86_expand_compare
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_compare/src/i386.c:8129:27: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  ix86_expand_compare( rtx_code code, rtx *second_test, rtx *bypass_test) 
                          ^
                          enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_compare/src/i386.c:8133:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_compare/src/i386.c:8144:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)v4 + 2)] == MODE_FLOAT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_compare/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ix86_expand_compare/src/obj/i386.o] Error 1
